proxy-kube-resources/traefik-app-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: hello-world
  labels:
    app: hello-world

spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
        - name: hello-world
          image: ramosmd/html-hello-world:latest
          ports:
            - name: web
              containerPort: 80
