proxy-kube-resources/traefik-app-services.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-world

spec:
  ports:
    - name: web
      port: 80
      targetPort: web

  selector:
    app: hello-world
